CS323/project/test/test_1/test_pCmS19rv.out
Error type A at Line 5: Mysterious lexeme ''\x3FFFF''
Error type A at Line 14: Mysterious lexeme '0x5gg'
